Debugging display problems with IndustryView

--- a/templates/components/menu.html
+++ b/templates/components/menu.html
@@ -12,8 +12,8 @@
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a class=" w3-button  w3-bar-item" href="/user/dashboard">Dashboard</a>
         <a class=" w3-button  w3-bar-item" href="/welcome">Home</a>
-        <a class=" w3-button  w3-bar-item" href="/user/data">All Data</a>
-        <a class=" w3-button  w3-bar-item" href="/user/table-data">Table Data</a>
+        <a class=" w3-button  w3-bar-item" href="/user/data">Base Data</a>
+        <a class=" w3-button  w3-bar-item" href="/user/table-data">Display Data</a>
         <a class=" w3-button  w3-bar-item" href="/admin/dashboard">Admin</a>
       </div>
     </div>
