Fixed link to a single industry - need to populate with data from IndustryStocks

--- a/templates/table-components/industry-table-full.html
+++ b/templates/table-components/industry-table-full.html
@@ -22,7 +22,7 @@
       {{range .IndustryViews }}
 
       <tr>
-        <td><a href="/industry/{{.Id}}">{{ .Name }}</a></td>
+        <td><a href="/industry/{{ .Viewed.Id}}">{{ .Name }}</a></td>
         <td><a href="/commodity/{{ .OutputCommodityId}}">{{ .Output }}</a>  </td>
         {{ .OutputScale.FormatRounded }}
         {{ .OutputGrowthRate.Format }}
