--- a/templates/table-components/commodity-table.html
+++ b/templates/table-components/commodity-table.html
@@ -2,7 +2,15 @@
   <header class="w3-container w3-blue">
     <div class="w3-center">Commodities</div>
   </header>
-
+<p> New Commodities</p>
+{{ .NewCommodityViews }}
+{{ range .NewCommodityViews}}
+<p> 
+  An item
+  {{ .ShowPlaceHolder }}
+  {{ .Show "Size" }}
+</p>
+{{ end }}
   <table>
     <thead>
       <tr>
