Eliminated the  old CommodityViews. NOTE we need to recreate the individual Commodity View

--- a/templates/display/index.html
+++ b/templates/display/index.html
@@ -1,6 +1,6 @@
 {{ template "header.html" .}}
 {{ template "menu.html" .}}
-<!-- {{ $A := len .CommodityViews}} -->
+<!-- {{ $A := len .NewCommodityViews}} -->
 <div class="w3-section w3-serif" style="width:auto ;margin:auto; padding-top: 3em;">
   <!-- {{ if ne $A 0}} -->
   <div>{{ template "commodity-table.html" .}}</div>
