--- a/templates/table-components/commodity-table.html
+++ b/templates/table-components/commodity-table.html
@@ -21,7 +21,7 @@
     </thead>
     <tbody>
       <!--Loop over the commodities  -->
-      {{range .NewCommodityViews }}
+      {{range .CommodityViews }}
       <tr>
         <td style="text-align:left">{{.Link}}</td>
         <td style="text-align:center">{{ .OriginGraphic }}</td>
