IndustryViews implemented in the full table

--- a/templates/table-components/industry-table-full.html
+++ b/templates/table-components/industry-table-full.html
@@ -2,9 +2,6 @@
   <header class="w3-container w3-blue">
     <h3 class="w3-center"> Industries </h3>
   </header>
-
-  
-
   <table id="industries" class="table table-striped w-auto">
     <thead>
       <tr>
@@ -21,22 +18,20 @@
     </thead>
     <tbody>
       <!--Loop over the industries -->
-      {{range .IndustryViews }}
+      {{range .NewIndustryViews }}
 
       <tr>
-        <td><a href="/industry/{{ .Viewed.Id}}">{{ .Name }}</a></td>
-        <td><a href="/commodity/{{ .OutputCommodityId}}">{{ .Output }}</a>  </td>
-        {{ .OutputScale.FormatRounded }}
-        {{ .OutputGrowthRate.Format }}
-        {{ .InitialCapital.FormatRounded }} 
-        {{ .WorkInProgress.FormatRounded }} 
-        {{ .CurrentCapital.FormatRounded }} 
-        {{ .Profit.FormatRounded }}
-        {{ .ProfitRate.Format }}
+        <td>{{ .Link }}</td>
+        <td>{{ .CommodityLink }} </td>
+        {{ .Show "OutputScale"}}
+        {{ .Show "OutputGrowthRate"}}
+        {{ .Show "InitialCapital"}}
+        {{ .Show "WorkInProgress"}}
+        {{ .Show "CurrentCapital"}}
+        {{ .Show "Profit"}}
+        {{ .Show "ProfitRate"}}
       </tr>
       {{end}}
     </tbody>
   </table>
 </div>
-  
-  
