--- a/templates/table-components/industry-table-sizes.html
+++ b/templates/table-components/industry-table-sizes.html
@@ -16,15 +16,16 @@
     </thead>
     <tbody>
       <!--Loop over the industries -->
-      {{range .IndustryViews }}
+      {{range .NewIndustryViews }}
 
       <tr>
-        <td style="text-align: left"><a href="/industry/{{.Id}}">{{ .Name }}</a></td>
-        {{ .ConstantCapitalSize.FormatRounded }}
-        {{ .VariableCapitalSize.FormatRounded}}
-        {{ .MoneyStockSize.FormatRounded}}
-        {{ .SalesStockSize.FormatRounded}}
-        {{ .OutputScale.FormatRounded}}
+        <td style="text-align: left">{{ .Link "industry"}}</td>
+        <!-- Need functions for the below -->
+        <!-- {{ .Show "ConstantCapitalSize" }}
+        {{ .Show "VariableCapitalSize"}}
+        {{ .Show "MoneyStockSize"}}
+        {{ .Show "SalesStockSize"}}
+        {{ .Show "OutputScale"}} -->
       </tr>
       {{end}}
     </tbody>
