Scaffolded out new views for all objects. Note we are stuck on getting at Variable and Constant Capital

--- a/templates/table-components/industry-table-sizes.html
+++ b/templates/table-components/industry-table-sizes.html
@@ -21,11 +21,11 @@
       <tr>
         <td style="text-align: left">{{ .Link "industry"}}</td>
         <!-- Need functions for the below -->
-        <!-- {{ .Show "ConstantCapitalSize" }}
-        {{ .Show "VariableCapitalSize"}}
-        {{ .Show "MoneyStockSize"}}
-        {{ .Show "SalesStockSize"}}
-        {{ .Show "OutputScale"}} -->
+        <!-- {{ .Show "ConstantCapitalSize" }} -->
+        {{ .VariableCapital.Size }}
+        <!-- {{ .Show "MoneyStockSize"}} -->
+        <!-- {{ .Show "SalesStockSize"}} -->
+        <!-- {{ .Show "OutputScale"}} -->
       </tr>
       {{end}}
     </tbody>
