More prep for streamlined views

--- a/templates/table-components/industry-table-full.html
+++ b/templates/table-components/industry-table-full.html
@@ -18,7 +18,7 @@
     </thead>
     <tbody>
       <!--Loop over the industries -->
-      {{range .NewIndustryViews }}
+      {{range .IndustryViews }}
 
       <tr>
         <td>{{ .Link "industry"}}</td>
