--- a/templates/table-components/industry-table-sizes.html
+++ b/templates/table-components/industry-table-sizes.html
@@ -3,7 +3,7 @@
     <div class="w3-center">Use Values </div>
   </header>
 
-  <table >
+  <table>
     <thead>
       <tr>
         <th style="width:40%">Industry</th>
@@ -16,19 +16,14 @@
     </thead>
     <tbody>
       <!--Loop over the industries -->
-      {{range .NewIndustryViews }}
+      {{range .IndustryViews }}
 
       <tr>
         <td style="text-align: left">{{ .Link "industry"}}</td>
-        <!-- Need functions for the below -->
-        <!-- {{ .Show "ConstantCapitalSize" }} -->
-        {{ .VariableCapital.Size }}
-        <!-- {{ .Show "MoneyStockSize"}} -->
-        <!-- {{ .Show "SalesStockSize"}} -->
-        <!-- {{ .Show "OutputScale"}} -->
+        {{ .GetVariable }}
+
       </tr>
       {{end}}
     </tbody>
   </table>
 </div>
-
