Displayed Money Stock in industry-table-sizes

--- a/templates/table-components/industry-table-full.html
+++ b/templates/table-components/industry-table-full.html
@@ -24,6 +24,12 @@
         {{ Link . `industry`}}
         {{ CommodityLink . }}
         {{ Show . "OutputScale"}}
+        {{ Show . "OutputGrowthRate"}}
+        {{ Show . "InitialCapital"}}
+        {{ Show . "WorkInProgress"}}
+        {{ Show . "CurrentCapital"}}
+        {{ Show . "Profit"}}
+        {{ Show . "ProfitRate"}}
       </tr>
       {{end}}
     </tbody>
