--- a/templates/table-components/industry-table-sizes.html
+++ b/templates/table-components/industry-table-sizes.html
@@ -19,9 +19,8 @@
       {{range .IndustryViews }}
 
       <tr>
-        <td style="text-align: left">{{ .Link "industry"}}</td>
-        {{ .GetVariable }}
-
+        {{ Link . "industry"}}
+        {{ Show .MoneyView "Size" }}
       </tr>
       {{end}}
     </tbody>
