Added SalesView to IndustryView

--- a/templates/table-components/industry-table-sizes.html
+++ b/templates/table-components/industry-table-sizes.html
@@ -21,6 +21,7 @@
       <tr>
         {{ Link . "industry"}}
         {{ Show .MoneyView "Size" }}
+        {{ Show .SalesView "Size"}}
       </tr>
       {{end}}
     </tbody>
