Fixed initialization bug

--- a/templates/table-components/industry-table-sizes.html
+++ b/templates/table-components/industry-table-sizes.html
@@ -15,11 +15,11 @@
       </tr>
     </thead>
     <tbody>
-      <!--Loop over the industries -->
       {{range .IndustryViews }}
-
       <tr>
         {{ Link . "industry"}}
+        {{ Show .ConstantView "Size" }}
+        {{ Show .VariableView "Size" }}
         {{ Show .MoneyView "Size" }}
         {{ Show .SalesView "Size"}}
       </tr>
