--- a/templates/table-components/industry-table-sizes.html
+++ b/templates/table-components/industry-table-sizes.html
@@ -22,6 +22,7 @@
         {{ Show .VariableView "Size" }}
         {{ Show .MoneyView "Size" }}
         {{ Show .SalesView "Size"}}
+        {{ Show . "OutputScale" }}
       </tr>
       {{end}}
     </tbody>
