Sufficient progress with streamlined to remove deprecated

--- a/templates/table-components/class-table-sizes.html
+++ b/templates/table-components/class-table-sizes.html
@@ -14,15 +14,13 @@
       </tr>
     </thead>
     <tbody>
-      <!--Loop over the classes -->
       {{range .ClassViews }}
-
       <tr>
-        <td style="text-align:left"><a href="/class/{{.Id}}">{{ .Name }}</a></td>
-        {{ .Population.FormatRounded}}
-        {{ .ConsumptionStockSize.FormatRounded }}
-        {{ .MoneyStockSize.FormatRounded }}
-        {{ .SalesStockSize.FormatRounded }}
+        {{ Link . `class`}}
+        {{ Show . "Population "}}
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
       </tr>
       {{end}}
     </tbody>
