--- a/templates/table-components/class-table-sizes.html
+++ b/templates/table-components/class-table-sizes.html
@@ -18,9 +18,9 @@
       <tr>
         {{ Link . `class`}}
         {{ Show . "Population "}}
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        <td>-consumption</td>
+        <td>-money</td>
+        <td>-sales</td>
       </tr>
       {{end}}
     </tbody>
