Rough display of industry-stocks table

--- a/templates/table-components/class-table-sizes.html
+++ b/templates/table-components/class-table-sizes.html
@@ -18,9 +18,7 @@
       <tr>
         {{ Link . `class`}}
         {{ Show . "Population "}}
-        <td>-consumption</td>
-        <td>-money</td>
-        <td>-sales</td>
+        {{  .ConsumptionView  }}
       </tr>
       {{end}}
     </tbody>
