--- a/templates/table-components/industry-table-full.html
+++ b/templates/table-components/industry-table-full.html
@@ -22,7 +22,7 @@
 
       <tr>
         {{ Link . `industry`}}
-        {{ CommodityLink . }}
+        {{ IndustryCommodityLink . }}
         {{ Show . "OutputScale"}}
         {{ Show . "OutputGrowthRate"}}
         {{ Show . "InitialCapital"}}
