--- a/templates/table-components/class-table-sizes.html
+++ b/templates/table-components/class-table-sizes.html
@@ -18,9 +18,9 @@
       <tr>
         {{ Link . `class`}}
         {{ Show . `Population`}}
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
+        {{ Show .ConsumptionView "Size" }}
+        {{ Show .MoneyView "Size" }}
+        {{ Show .SalesView "Size" }}
       </tr>
       {{end}}
     </tbody>
