Links to objects all working except ClassStockCommodityLink (requires change to API)

--- a/templates/tables/class_stocks.html
+++ b/templates/tables/class_stocks.html
@@ -23,7 +23,7 @@
         <tr>
           {{ ShowString . `UsageType` }}
           {{ StockClassLink . }}
-          {{ StockCommodityLink .}}
+          {{ ClassStockCommodityLink .}}
           {{ Show . `Size` }}
           {{ Show . `Value` }}
           {{ Show . `Price` }}
