--- a/templates/tables/industry_stocks.html
+++ b/templates/tables/industry_stocks.html
@@ -24,7 +24,7 @@
         <tr>
           {{ ShowString . "UsageType" }}
           {{ StockIndustryLink . }}
-          {{ StockCommodityLink .}}
+          {{ IndustryStockCommodityLink .}}
           {{ Show . "Size" }}
           {{ Show . "Value" }}
           {{ Show . "Price" }}
