Decimal output added

--- a/templates/components/commodity-table.html
+++ b/templates/components/commodity-table.html
@@ -29,8 +29,8 @@
         {{ Show . "Size" }}
         {{ Show . "TotalValue" }}
         {{ Show . "TotalPrice" }}
-        {{ Show . "UnitValue" }}
-        {{ Show . "UnitPrice" }}
+        {{ ShowDecimal . "UnitValue" }}
+        {{ ShowDecimal . "UnitPrice" }}
         {{ Show . "TurnoverTime" }}
         {{ Show . "Demand" }}
         {{ Show . "Supply" }}
