--- a/templates/components/menu.html
+++ b/templates/components/menu.html
@@ -15,6 +15,8 @@
         <a class=" w3-button  w3-bar-item" href="/user/data">Base Data</a>
         <a class=" w3-button  w3-bar-item" href="/user/table-data">Display Data</a>
         <a class=" w3-button  w3-bar-item" href="/admin/dashboard">Admin</a>
+        <a class=" w3-button  w3-bar-item" href="/trace">Trace</a>
+
       </div>
     </div>
 
