--- a/templates/experimental/elodieb.html
+++ b/templates/experimental/elodieb.html
@@ -5,44 +5,64 @@
     cursor: pointer;
     padding: 0.5em;
     color: #fff;
-    transition-duration: 1s;
-    transition-property: background;
-    background: rgba(132, 109, 77, 1);
+    background: lightgray;
     border-bottom: 1px solid #fff;
+    width:90%;
+    margin:auto;
   }
 
   .accordion dl dd {
     display: none;
     height: auto;
-    margin-left: 0;
-    padding: 1em;
   }
 
   .accordion-nested {
-    margin: -1em;
+    background: lightgray;
   }
 
   .accordion-nested dl {
-    width: 100%;
-    margin-left: 0;
+    background: lightgray;
   }
 
   .accordion-nested dl dt {
-    background: rgba(132, 109, 77, .8)
+    background: lightgray;
+    padding-left: 1 em;
+    color:green;
   }
 
   .accordion-nested .accordion-nested dl dt {
-    background: rgba(132, 109, 76, .6)
+    background: lightgray;
+    padding-left: 2 em;
+    color:Blue;
   }
 
   .accordion-nested .accordion-nested .accordion-nested dl dt {
-    background: rgba(132, 109, 77, .4)
+    background: lightgray;
+    padding-left: 3 em;
+    color:red;
   }
 
   .accordion-nested .accordion-nested .accordion-nested .accordion-nested dl dt {
-    background: rgba(132, 109, 77, .2)
+    background: white;
+    padding-left: 4 em;
   }
 </style>
+<div class="accordion">
+  <div class="accordion-nested"><dl>
+    {{ $currentLevel := 1 }}
+    {{range .Trace }}
+      {{ if ne .Level $currentLevel }}
+          {{ if gt .Level $currentLevel }}
+            <div class="accordion-nested"><dl>
+          {{ else }}      
+            </dl></div>
+          {{ end }}
+          {{ $currentLevel = .Level}} <!-- ASSUMES INPUTS ARE PROPERLY NESTED WITH NO GAPS -->
+      {{ end }}
+      <dt >{{.Level}}:{{ .Message }}</dt>
+    {{ end }}
+  </div>
+</div>
 
 <body>
   <div class="accordion">
@@ -58,7 +78,7 @@
                   <dt>Sub-sub-question 1.1.1</dt>
                   <dd>lorem ipsum</dd>
                   <dt>Sub-sub-question 1.1.2</dt>
-                  <dd>lorem ipsum<< /dd>
+                  <dd>lorem ipsum </dd>
                   <dt>Sub-sub-question 1.1.3</dt>
                   <dd>lorem ipsum</dd>
                 </dl>
@@ -119,20 +139,20 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 <script>
-$('.accordion dt').on('click', function () {
+  $('.accordion dt').on('click', function () {
 
-var current_dt = $(this);
+    var current_dt = $(this);
 
-//dd of just clicked dt not active - direct sibling
-if (!$(this).next('dd').hasClass('active')){
-    //call back function interprets this as selected $('dd')
+    //dd of just clicked dt not active - direct sibling
+    if (!$(this).next('dd').hasClass('active')) {
+      //call back function interprets this as selected $('dd')
 
-    //checking if any other sibling dd's active
-    if (current_dt.siblings('dd.active').length) {
+      //checking if any other sibling dd's active
+      if (current_dt.siblings('dd.active').length) {
         //find dd with a class of active before sliding up
         current_dt
           .siblings('dd.active')
-          .slideUp(function() {
+          .slideUp(function () {
             current_dt
               .next('dd')
               .slideDown()
@@ -140,17 +160,17 @@ if (!$(this).next('dd').hasClass('active')){
           })
           .removeClass('active')
           .find('dd.active')
-            .hide()
-            .removeClass('active');
+          .hide()
+          .removeClass('active');
 
-     } else {
-        current_dt.next('dd').slideDown().addClass('active');       
-     }
-} else {
-    //dd of just clicked dt is active - close form
-    current_dt.next('dd').slideUp().removeClass('active');
-}
-});
+      } else {
+        current_dt.next('dd').slideDown().addClass('active');
+      }
+    } else {
+      //dd of just clicked dt is active - close form
+      current_dt.next('dd').slideUp().removeClass('active');
+    }
+  });
 
 
 
